# OpenER

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  cheatsheet  install.md
Mechanical/: OpenER electronics.docx  RAL Space OpenER - Rover BOM Final.xlsx  Readme.md
Mechanical/CAD/: 10Tpinon.SLDPRT  15Tpinon.SLDPRT  20x20xsection.sldprt  27mm Pipe Clamp.sldprt  57T internal M1.sldprt  68T internal M1.sldprt  ASMHub.sldasm  Bearing Mount.sldprt  Body Unit.sldasm  Bottom Panel.sldprt  Bracket20x40.sldprt  CAMfollower.sldprt  Cover.sldprt  EncoderAEAT601-B.sldprt  Handle.sldprt  M4 RodEnd male.sldprt  M6x12.SLDPRT  Motor Support Plate.sldprt  Mount End.sldprt  Pivot Bearing.sldasm  (+8 more)
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
src/: mykey.asc
src/four_wheel_steer_teleop/: CMakeLists.txt  LICENSE  README.md  package.xml
src/four_wheel_steer_teleop/launch/: teleop.launch
src/four_wheel_steer_teleop/scripts/: four_wheel_steer_teleop.py
src/four_wheel_steering_controller/: CMakeLists.txt  four_wheel_steering_controller_plugins.xml
src/four_wheel_steering_controller/config/: four_wheel_steering_controller_4ws_cmd.yaml  four_wheel_steering_controller_twist_cmd.yaml  four_wheel_steering_wrong_config.yaml
src/four_wheel_steering_controller/include/four_wheel_steering_controller/: four_wheel_steering_controller.h  odometry.h
src/four_wheel_steering_controller/launch/: four_wheel_steering_common.launch  four_wheel_steering_controller_4ws_cmd.launch  view_four_wheel_steering.launch
src/four_wheel_steering_controller/original_test/config/: four_wheel_steering_controller_4ws_cmd.yaml  four_wheel_steering_controller_twist_cmd.yaml
src/four_wheel_steering_controller/original_test/src/: four_wheel_steering.h
src/four_wheel_steering_controller/src/: four_wheel_steering.cpp  four_wheel_steering_4ws_cmd_test.cpp  four_wheel_steering_controller.cpp  odometry.cpp
(+215 files in other folders)
