<?xml version="1.0"?>
<package format="2">
  <name>four_wheel_steer_teleop</name>
  <version>0.0.0</version>
  <description>The four_wheel_steer_teleop package</description>

  <maintainer email="gkourosg@yahoo.gr">George Kouros</maintainer>

  <license>BSD</license>

  <author email="gkourosg@yahoo.gr">George Kouros</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
